--- a/src/Prog15.X/Prog15.X/nbproject/Makefile-genesis.properties
+++ b/src/Prog15.X/Prog15.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Fri Jan 17 08:37:39 CET 2025
+#Fri Jan 17 11:04:46 CET 2025
 default.languagetoolchain.version=4.45
-default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.20\\packs\\Microchip\\PIC32MX_DFP\\1.5.259
+default.Pack.dfplocation=/Applications/microchip/mplabx/v6.20/packs/Microchip/PIC32MX_DFP/1.5.259
 conf.ids=default
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.45\\bin
+default.languagetoolchain.dir=/Applications/microchip/xc32/v4.45/bin
 default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=1eaf555a844840d91945cb14109201c3
-host.id=p0hd-fvhh-t
-configurations-xml=5d4ce0031745c0a3a65ba692e9bf9a0c
+host.id=2uxq-1rp1-ln
+configurations-xml=e4291e3c7efcb5727775705705d25807
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
-default.com-microchip-mplab-mdbcore-pk3ob-PK3OBDbgToolManager.md5=79b6a21eb7d855d755f2a429fe098221
-proj.dir=C\:\\Users\\giada\\Documents\\GitHub\\MonitoraggioLuceAmbientale\\src\\Prog15.X\\Prog15.X
-host.platform=windows
+proj.dir=/Users/micheacolautti/Documents/06. GitHub/MonitoraggioLuceAmbientale/src/Prog15.X/Prog15.X
+host.platform=mac
